# wikimem

./: .gitignore  404.html  CNAME  README.md  README.zh-CN.md  hashmap.json  index.html  pyproject.toml
.github/workflows/: docs-deploy.yml  test.yml
adr/: 0001-diary-store.html  0002-time-range-retrieval.html  0003-vectors-cache-metadata.html  0004-api-contract-thin-shells.html  README.html
assets/: adr_0001-diary-store.md.BhgZDP-g.js  adr_0001-diary-store.md.BhgZDP-g.lean.js  adr_0002-time-range-retrieval.md.BKRpLEuW.js  adr_0002-time-range-retrieval.md.BKRpLEuW.lean.js  adr_0003-vectors-cache-metadata.md.DJKKdsYG.js  adr_0003-vectors-cache-metadata.md.DJKKdsYG.lean.js  adr_0004-api-contract-thin-shells.md.C1a4VkOS.js  adr_0004-api-contract-thin-shells.md.C1a4VkOS.lean.js  adr_README.md.Dy1gJtjx.js  adr_README.md.Dy1gJtjx.lean.js  app.0GkjVJaQ.js  app.BZ19ezPE.js  app.C8Cn7sMP.js  app.DZK9cBlW.js  app.EBZ3rsEX.js  app.Gm7ly1zp.js  app.ygYqN4jE.js  guide_embedding-fusion.md.CRKiEtOa.js  guide_embedding-fusion.md.CRKiEtOa.lean.js  guide_embedding-fusion.md.Co7L_l2-.js  guide_embedding-fusion.md.Co7L_l2-.lean.js  guide_embedding-fusion.md.Cs1JxBqQ.js  guide_embedding-fusion.md.Cs1JxBqQ.lean.js  guide_getting-started.md.Bgj0zzWw.js  guide_getting-started.md.Bgj0zzWw.lean.js  guide_getting-started.md.C96GX4dW.js  guide_getting-started.md.C96GX4dW.lean.js  guide_getting-started.md.Ch8bUaji.js  guide_getting-started.md.Ch8bUaji.lean.js  guide_host-integration.md.BXk1VgP9.js  guide_host-integration.md.BXk1VgP9.lean.js  guide_host-integration.md.BwXYjjDV.js  guide_host-integration.md.BwXYjjDV.lean.js  guide_retrieval.md.1VDByiDk.js  guide_retrieval.md.1VDByiDk.lean.js  guide_retrieval.md.DkDqZnPu.js  guide_retrieval.md.DkDqZnPu.lean.js  guide_what-is-wikimem.md.4Ry29G2T.js  guide_what-is-wikimem.md.4Ry29G2T.lean.js  guide_what-is-wikimem.md.DMwCQPHp.js  (+91 more)
assets/chunks/: @localSearchIndexroot.3dl8f-ds.js  @localSearchIndexroot.B3zs0eTt.js  @localSearchIndexroot.CVV8k_Zx.js  @localSearchIndexroot.Cfq4SdPT.js  @localSearchIndexroot.D6wgLoTb.js  @localSearchIndexroot.DrvxDD-i.js  @localSearchIndexroot.DzlDzg7L.js  @localSearchIndexzh.BKfoYEMv.js  @localSearchIndexzh.C8ympHm_.js  @localSearchIndexzh.CVnyDQ8e.js  @localSearchIndexzh.D-V--uSk.js  @localSearchIndexzh.DgPH5e7R.js  @localSearchIndexzh.Y4nOKokS.js  @localSearchIndexzh.yBDumwuC.js  (+15 more)
bench/: link_probe.py
docs/: index.md  package.json
guide/: embedding-fusion.html  getting-started.html  host-integration.html  retrieval.html  what-is-wikimem.html  wiki-links.html  writing-diary.html
reference/: api.html  cli.html  file-format.html  vectors.html
tests/: test_cli.py  test_diary.py  test_journal.py  test_links.py  test_retrieval.py  test_serialize.py  test_serve.py  test_store.py  test_tokenize.py  test_vectors.py
zh/: index.html
(+55 files in other folders)
