[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikimem"
version = "0.1.0.dev0"
description = "File-first memory pipeline: categories + wiki-links over plain markdown. Zero infra required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "XnneHangLab" }]
keywords = ["memory", "agent", "markdown", "wiki-links", "bm25"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
# Hard constraint (lab ADR-0001): the core has ZERO mandatory dependencies.
dependencies = []

[project.optional-dependencies]
zh = ["jieba>=0.42"]
embed = ["httpx>=0.27", "numpy>=1.26"]
all = ["jieba>=0.42", "httpx>=0.27", "numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/XnneHangLab/wikimem"

[project.scripts]
wikimem = "wikimem.cli:main"

[dependency-groups]
# dev includes the [embed] deps so the fusion path is tested locally and in CI.
dev = ["pytest>=8", "httpx>=0.27", "numpy>=1.26", "ty>=0.0.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.src]
include = ["src", "tests", "bench"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
